# gelo-lightrag

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  cubecl.toml  docs-tidy-plan.md  docs-tidy-warnings.md
crates/approach4/: Cargo.toml
crates/approach4/src/: attestation.rs  lib.rs  service.rs  snp.rs
crates/approach4/tests/: beir_accuracy.rs  dp_forward_caprise_e2e.rs  encrypted_embed_retrieve.rs  fastembed_sap_roundtrip.rs  gelo_embedder_accuracy.rs  obfuscation_accuracy.rs  obfuscation_bench.rs  sap_caprise_perf.rs  snp_attest_e2e.rs
crates/compass-index/: Cargo.toml
crates/compass-index/src/: codec.rs  hints.rs  hnsw_plain.rs  index.rs  lib.rs  search.rs
crates/compass-index/tests/: recall.rs
crates/compass-rest-backend/: Cargo.toml
crates/compass-rest-backend/src/: client.rs  lib.rs  server.rs  wire.rs
crates/compass-rest-backend/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: caprise.rs  content.rs  distance.rs  embed.rs  keying.rs  lib.rs  prf.rs  sap.rs  storage.rs  types.rs
crates/gelo-chunker/: Cargo.toml
crates/gelo-chunker/src/: lib.rs
crates/gelo-embedder/: Cargo.toml
crates/gelo-embedder/src/: attention.rs  embedder.rs  forward.rs  lib.rs  pooling.rs  tokenizer.rs  weights.rs
crates/gelo-embedder/tests/: attn_cover_capture.rs  decoder_async_parity.rs  decoder_parity.rs  dp_forward_attestation.rs  dp_forward_intermediate_layer.rs  gemma4_e2e.rs  gemma4_hf_parity.rs  generation_harness.rs  parity.rs  qwen3_e2e.rs  qwen3_generation_e2e.rs  qwen3_hf_parity.rs
crates/gelo-gpu-wgpu/: Cargo.toml
crates/gelo-gpu-wgpu/benches/: amulet_attention.rs
crates/gelo-gpu-wgpu/src/: lib.rs
crates/gelo-gpu-wgpu/tests/: bge_gelo_mask_breakdown.rs  bge_small_e2e.rs  burn_cubecl_spike.rs  cubecl_batched_probe.rs  cubek_attention_spike.rs  decode_step_batched_bench.rs  f16_kernel_spike.rs  fp16_parity.rs  gelo_overhead_bench.rs  kv_session.rs  matmul_async_parity.rs  parity.rs  path_beta_bf16_input.rs  q2_radv_async_spike.rs  q4_hip_kernel_spike.rs  q4_kernel_spike.rs  qwen3_4b_batched_mask_sweep.rs  qwen3_generation_bench.rs  qwen3_long_context_bench.rs  qwen3_m1_12_r1_q1_microbench.rs  qwen3_overhead_bench.rs  qwen3_overhead_breakdown.rs  r4_async_minibench.rs
crates/gelo-protocol/: Cargo.toml
crates/gelo-protocol/benches/: mask_bf16_lpgemm.rs  shield_gaussian.rs
crates/gelo-protocol/src/: aocl_lpgemm.rs  attention.rs  dct4.rs  gaussian.rs  hd3.rs  integrity.rs  lib.rs  mask.rs  out_attn_mult.rs  ple.rs  profile.rs  rng.rs  shield.rs  sim.rs  snapshot.rs  substrate.rs
crates/gelo-protocol/tests/: bf16_cascade_microbench.rs  bf16_mask_parity.rs  bss_recovery.rs  permutation_attention.rs  ple_pcie_leak.rs  qr_bench.rs  snapshot_capture.rs  u_verify.rs
crates/gelo-rag/: Cargo.toml
crates/gelo-rag/src/: lib.rs  service.rs  snp.rs  two_party_service.rs
crates/gelo-rag/tests/: beir_accuracy.rs  dp_forward_caprise_e2e.rs  encrypted_embed_retrieve.rs  gelo_embedder_accuracy.rs  obfuscation_accuracy.rs  obfuscation_bench.rs  rerank_e2e_bench.rs  sap_caprise_perf.rs  snp_attest_e2e.rs  two_party_kdf_e2e.rs
crates/gelo-reranker/: Cargo.toml
crates/gelo-reranker/src/: causal_discriminator.rs  cross_encoder.rs  head.rs  lib.rs  output.rs  score.rs  service.rs  session.rs
crates/gelo-reranker/tests/: bundle_round_trip.rs  causal_discriminator_parity.rs  comparative_bench.rs  cross_encoder_parity.rs
crates/gelo-snp-runner/: Cargo.toml
crates/gelo-snp-runner/examples/: extract_and_query_bench.rs
crates/gelo-snp-runner/src/: compass.rs  config.rs  evidence.rs  extraction.rs  issuer.rs  lib.rs  lightrag_routes.rs  main.rs
crates/gelo-snp-runner/tests/: lightrag_extract_and_build.rs
crates/gelo-tee-sev-snp/: Cargo.toml
crates/gelo-tee-sev-snp/examples/: mint-test-pki.rs
crates/gelo-tee-sev-snp/src/: cert_chain.rs  executor.rs  lib.rs  report.rs  report_data.rs  runtime_mode.rs  verify.rs
crates/gelo-tee-sev-snp/tests/: verify_end_to_end.rs
crates/graphrag-bench/: Cargo.toml
crates/graphrag-bench/src/: lib.rs  stages.rs  summary.rs  synth.rs
crates/light-kg-store/: Cargo.toml
crates/light-kg-store/src/: aes_chunk_store.rs  keys.rs  lib.rs  store.rs  types.rs
crates/light-kg-store/tests/: build_and_query.rs
crates/lightrag-private/: Cargo.toml
crates/lightrag-private/src/: lib.rs  perturb.rs  service.rs  two_party_service.rs
crates/lightrag-private/tests/: local_kg_query.rs
crates/remote-rag/: Cargo.toml  README.md
crates/remote-rag/src/: lib.rs  paillier.rs  planar_laplace.rs  service.rs
crates/remote-rag/tests/: paillier_perf.rs  remote_rag_e2e.rs  remote_rag_scale.rs
crates/ring-oram/: Cargo.toml
crates/ring-oram/src/: backend.rs  block.rs  client.rs  codec.rs  lib.rs  params.rs  path.rs  posmap.rs  stash.rs
crates/xormm-emm/: Cargo.toml
crates/xormm-emm/src/: backend.rs  bucket.rs  client.rs  lib.rs  params.rs
evals/aloepri-attacks/: .gitignore  ATTACK_FAMILIES.md  Cargo.toml  Containerfile  README.md  __init__.py  conftest.py  persistent_attn_gate.py  pyproject.toml  run-in-container.sh  run_all.py  snapshots_loader.py
evals/aloepri-attacks/attack_drivers/: __init__.py  common.py  run_anchor_ica.py  run_gram_error.py  run_ia.py  run_ima.py  run_ima_paper_like.py  run_isa.py  run_isa_attn_score.py  run_jade.py  run_jd.py  run_nn.py  run_sda.py  run_tfma.py  run_vma.py
evals/aloepri-attacks/corpora/: release-gate-64.txt
evals/aloepri-attacks/m2_7/: Dockerfile.ima-trainer  HIDDEN_STATE_GAP.md  README.md  __init__.py  apply-patches.sh  build_corpus_512.py  capture_hidden_states.py  capture_token_streams.py  extract_gguf_weights.py  m2_7_common.py  probe_alg2_ia_invariant.py  probe_alg2_static_attacks.py  probe_luckiness_signature.py  probe_pool_alignment.py  run_all_m2_7.py  run_arrowmatch.py  run_hidden_state_attacks.py  run_ima_embedrow_attacks.py  run_ima_embedrow_attacks_multikey.py  run_in_gpu_container.sh  run_isa_attn_score_multikey.py  (+12 more)
python/aloepri-llm/: aloepri_client.py  gate_b_determinism.py  obfuscate_qwen3_gguf.py  pyproject.toml  select_adversarial_kd.py
(+448 files in other folders)
