[workspace]
members = [
    "crates/core",
    "crates/approach4",
    "crates/dp-forward",
    "crates/gelo-protocol",
    "crates/gelo-embedder",
    "crates/gelo-gpu-wgpu",
    "crates/gelo-tee-sev-snp",
    "crates/gelo-snp-runner",
    "crates/remote-rag",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
bytemuck = "1.21"
fastembed = { version = "5.13.3", default-features = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
hmac = "0.12.1"
matrixmultiply = "0.3"
ndarray = "0.16"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5"
rayon = "1.10"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
safetensors = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.9"
statrs = "0.18"
thiserror = "2.0.17"
dp-forward = { path = "crates/dp-forward" }
# fast-paillier 0.3.2: MIT OR Apache-2.0. Default `backend-num-bigint` is
# pure-Rust (num-bigint + glass_pumpkin); the LGPL `rug`/GMP path is the
# optional `backend-rug` feature, which we do NOT enable.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-prime = "0.5"
hnsw_rs = "0.3"
flate2 = "1.0"
zip = "2.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
wgpu = "26"
cubecl = { version = "=0.9.0", default-features = false, features = ["std", "wgpu"] }
cubecl-core = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-runtime = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-std = { version = "=0.9.0", default-features = false }
cubecl-common = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-wgpu = { version = "=0.9.0", default-features = false, features = ["std", "spirv"] }
# Spike: burn-cubecl as smart-runtime over cubecl (real autotune + fusion + lazy eval).
# Replaces direct cubecl-matmul use — cubecl-matmul has no stable release, only 0.9.0-pre.X.
burn-cubecl = { version = "=0.20.1", default-features = false, features = ["std", "autotune", "fusion"] }
burn-tensor = { version = "=0.20.1", default-features = false, features = ["std"] }
burn-backend = { version = "=0.20.1", default-features = false, features = ["std", "cubecl-wgpu"] }
# M5 — SEV-SNP attestation
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }
x509-cert = { version = "0.2", default-features = false, features = ["std", "pem"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pem"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
hex = "0.4"
# M5.7 — service runner
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
base64 = "0.22"

