[workspace]
members = [
    "crates/core",
    "crates/gelo-rag",
    "crates/gelo-protocol",
    "crates/gelo-embedder",
    "crates/gelo-gpu-wgpu",
    "crates/gelo-reranker",
    "crates/gelo-tee-sev-snp",
    "crates/gelo-snp-runner",
    # Private LightRAG / GraphRAG retrieval — Compass over Ring-ORAM.
    "crates/ring-oram",
    "crates/compass-index",
    "crates/compass-rest-backend",
    "crates/xormm-emm",
    "crates/light-kg-store",
    "crates/lightrag-private",
    "crates/graphrag-bench",
    # AloePri attack-resistance harness. Lives under evals/ so the GELO
    # protocol crates stay untouched.
    "evals/aloepri-attacks",
]
exclude = [
    # Vendored + patched cubecl-hip-sys for ROCm 7.2.1 — kept out of the
    # workspace because it's a third-party crate with its own pinned
    # edition/rust-version. Pulled in via [patch.crates-io] only.
    "vendor/cubecl-hip-sys-patched",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
bytemuck = "1.21"
fastembed = { version = "5.13.3", default-features = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
hmac = "0.12.1"
# RustCrypto HKDF — composed over `hmac` + `sha2` we already pull in.
# Used by `core/src/keying.rs` for the two-party CAPRISE key derivation.
# Pure-Rust, MIT/Apache-2.0.
hkdf = "0.12"
# RustCrypto zeroize — drop-time wipe for secret 32-byte buffers
# (`user_x_sk`, `tee_user_x_sk`, derived `caprise_seed_key`,
# `aes_chunk_key`). `derive` feature enables `#[derive(Zeroize,
# ZeroizeOnDrop)]`.
zeroize = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck", "num-traits"] }
matrixmultiply = "0.3"
ndarray = "0.16"
# BLAS backend wiring for the GELO mask apply/unapply (CPU GEMMs at
# stacked_n ≈ 400, d ∈ {1024, 3072}). Enable on a crate by adding the
# `blas` feature; that lights up ndarray's BLAS fast path which the
# default matrixmultiply backend lags by ~2–3× at our shapes. We use
# BLIS (built from source by blis-src) because it's pure C — no Fortran
# dep — and BLIS' `zen` config-set lands well on this APU.
blas-src = { version = "0.14", default-features = false, features = ["blis"] }
blis-src = { version = "0.2", default-features = false, features = ["system", "cblas"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5"
rayon = "1.10"
# DCT-IV cascade mask (`gelo-protocol::dct4`) — alternative to HD₃ that
# works at arbitrary `s` (not just powers of two). Used by the
# hybrid-auto-dispatch path at non-pow2 prompt shapes. See
# `docs/research/hd3-non-pow2-fix.md` §6 for the design.
rustdct = "0.7"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
safetensors = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.9"
statrs = "0.18"
thiserror = "2.0.17"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-prime = "0.5"
hnsw_rs = "0.3"
flate2 = "1.0"
zip = "2.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
wgpu = "26"
cubecl = { version = "=0.9.0", default-features = false, features = ["std", "wgpu"] }
cubecl-core = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-runtime = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-std = { version = "=0.9.0", default-features = false }
cubecl-common = { version = "=0.9.0", default-features = false, features = ["std"] }
cubecl-wgpu = { version = "=0.9.0", default-features = false, features = ["std", "spirv"] }
# AMD ROCm/HIP runtime for cubecl. Used by the Q4 spike
# (`crates/gelo-gpu-wgpu/tests/q4_hip_kernel_spike.rs`) to compare against
# the Vulkan path's poor Q4 perf. Optional: only pulled in as a dev-dep
# on `gelo-gpu-wgpu`, never in release binaries.
cubecl-hip = { version = "=0.9.0", default-features = false, features = ["std", "rocwmma"] }
# Need the 7.1.x hip-sys API surface for cubecl-hip 0.9.0 to compile;
# ROCm 7.2.1 reports HIP patch 53211 which is past the 52802 binding
# cap. Patched locally via `vendor/cubecl-hip-sys-patched` (see
# [patch.crates-io] below) to alias hip_53211 → bindings_52802.
cubecl-hip-sys = "=7.1.5280200"
# Spike: burn-cubecl as smart-runtime over cubecl (real autotune + fusion + lazy eval).
# Replaces direct cubecl-matmul use — cubecl-matmul has no stable release, only 0.9.0-pre.X.
burn-cubecl = { version = "=0.20.1", default-features = false, features = ["std", "autotune", "fusion"] }
burn-tensor = { version = "=0.20.1", default-features = false, features = ["std"] }
burn-backend = { version = "=0.20.1", default-features = false, features = ["std", "cubecl-wgpu", "cubecl-hip"] }
# M5 — SEV-SNP attestation
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }
x509-cert = { version = "0.2", default-features = false, features = ["std", "pem"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pem"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
hex = "0.4"
# M5.7 — service runner
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
tower = "0.5"
# Async-trait macro for `BlockBackend` (M5.0): boxes the returned future
# so the trait is dyn-compatible and stable on Rust 1.75+.
async-trait = "0.1"
# msgpack codec for the `compass-rest-backend` wire format (M5.1).
rmp-serde = "1.3"
serde_bytes = "0.11"
url = "2"
# Embedded KV for the `compass-rest-backend` server side (M5.1).
# Sled is the simplest pure-Rust choice with crash-safe writes and a
# stable Tree::insert/get API. M5.4 swaps to `object_store` for cloud
# durability behind a feature flag.
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
base64 = "0.22"

[patch.crates-io]
# Local patch: bindings/mod.rs has `hip_53211` aliased to `bindings_52802`
# so the cubecl-hip-sys build.rs (which auto-detects HIP patch 53211 from
# our installed ROCm 7.2.1) finds a matching feature flag. Upstream
# cubecl-hip-sys 7.1.5280200 caps at hip_52802. Remove this patch once
# cubecl-hip-sys publishes ROCm 7.2 bindings.
cubecl-hip-sys = { path = "vendor/cubecl-hip-sys-patched" }

