[package]
name = "approach4"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rag_core = { path = "../core", package = "core" }

[dev-dependencies]
gelo-embedder = { path = "../gelo-embedder" }
gelo-protocol = { path = "../gelo-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
