[package]
name = "compass-index"
version.workspace = true
edition.workspace = true
license.workspace = true

# HNSW-over-Ring-ORAM with Compass optimizations. See
# `docs/prototype/private-graph-rag-variant-a.md` §4.2 (surface) and §7
# M3/M4 (plain Ring-ORAM HNSW + Compass optimizations milestones). M0
# ships a skeleton only.

[dependencies]
anyhow.workspace = true
hnsw_rs.workspace = true
ring-oram = { path = "../ring-oram" }
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
