[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rag_core"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
fastembed.workspace = true
hmac.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
