[package]
name = "gelo-embedder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gelo-protocol = { path = "../gelo-protocol" }
hf-hub.workspace = true
ndarray = { workspace = true, features = ["rayon"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true

[dev-dependencies]
rand_distr.workspace = true
