[package]
name = "gelo-embedder"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Recipe-B aMGM noise on the pooled embedding, applied inside the embedder
# so the DP parameters fold into `Embedder::model_identity` and the SEV-SNP
# attestation report binds to them. See `crates/dp-forward/README.md`.
dp-forward = ["dep:dp-forward"]

[dependencies]
anyhow.workspace = true
dp-forward = { workspace = true, optional = true }
gelo-protocol = { path = "../gelo-protocol" }
hex.workspace = true
hf-hub.workspace = true
ndarray = { workspace = true, features = ["rayon"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true

[dev-dependencies]
dp-forward = { workspace = true }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rand_distr.workspace = true
sha2.workspace = true
