[package]
name = "gelo-embedder"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow.workspace = true
gelo-protocol = { path = "../gelo-protocol" }
half.workspace = true
hex.workspace = true
hf-hub.workspace = true
ndarray = { workspace = true, features = ["rayon"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true

[dev-dependencies]
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rand_distr.workspace = true
sha2.workspace = true
