[package]
name = "gelo-gpu-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
burn-backend.workspace = true
burn-cubecl.workspace = true
burn-tensor.workspace = true
bytemuck.workspace = true
cubecl.workspace = true
cubecl-common.workspace = true
cubecl-core.workspace = true
cubecl-runtime.workspace = true
cubecl-std.workspace = true
cubecl-wgpu.workspace = true
gelo-protocol = { path = "../gelo-protocol" }
half.workspace = true
ndarray.workspace = true
wgpu.workspace = true

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
gelo-embedder = { path = "../gelo-embedder" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
hf-hub.workspace = true
serde_json.workspace = true
