[package]
name = "gelo-gpu-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default-on (since 2026-05-19): BLIS-mt at n=2048 prefill is 5×
# faster than matrixmultiply, and equal/better at smaller shapes
# with threads=1 (the default). Pass through to gelo-protocol's
# blas feature, which links AOCL-BLIS via blis-src `system`. To
# force pure-Rust matrixmultiply, build with --no-default-features.
default = ["blas"]
blas = ["gelo-protocol/blas"]

[dependencies]
anyhow.workspace = true
burn-backend.workspace = true
burn-cubecl.workspace = true
burn-tensor.workspace = true
bytemuck.workspace = true
cubecl.workspace = true
cubecl-common.workspace = true
cubecl-core.workspace = true
cubecl-runtime.workspace = true
cubecl-std.workspace = true
cubecl-wgpu.workspace = true
cubek-attention.workspace = true
gelo-protocol = { path = "../gelo-protocol", default-features = false }
half.workspace = true
ndarray.workspace = true
wgpu.workspace = true

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
gelo-embedder = { path = "../gelo-embedder" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
hf-hub.workspace = true
serde_json.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# ROCm/HIP runtime — only pulled in for the Q4-on-HIP spike test
# (`tests/q4_hip_kernel_spike.rs`). Requires ROCm 6.x installed
# at /opt/rocm; build will fail loudly if not.
cubecl-hip.workspace = true
cubecl-hip-sys.workspace = true

[[bench]]
name = "amulet_attention"
harness = false
