[package]
name = "gelo-gpu-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default-on (since 2026-05-19): BLIS-mt at n=2048 prefill is 5×
# faster than matrixmultiply, and equal/better at smaller shapes
# with threads=1 (the default). Pass through to gelo-protocol's
# blas feature, which links AOCL-BLIS via blis-src `system`. To
# force pure-Rust matrixmultiply, build with --no-default-features.
default = ["blas"]
blas = ["gelo-protocol/blas"]
# Opt-in CUDA backend (Nvidia dGPU). Flips the engine's cubecl runtime
# from wgpu/Vulkan to cubecl-cuda at compile time; Vulkan stays the
# default. Used to A/B the GPU-matmul path on Nvidia. Requires a CUDA
# toolkit (nvrtc) + driver present.
cuda = ["dep:cubecl-cuda", "burn-backend/cubecl-cuda"]

[dependencies]
anyhow.workspace = true
burn-backend.workspace = true
burn-cubecl.workspace = true
burn-tensor.workspace = true
bytemuck.workspace = true
cubecl.workspace = true
cubecl-common.workspace = true
cubecl-core.workspace = true
cubecl-runtime.workspace = true
cubecl-std.workspace = true
cubecl-wgpu.workspace = true
cubecl-cuda = { workspace = true, optional = true }
cubek-attention.workspace = true
gelo-protocol = { path = "../gelo-protocol", default-features = false }
half.workspace = true
ndarray.workspace = true
wgpu.workspace = true

[dev-dependencies]
# `reference-engine` opts into the test-only CPU adapter used by the
# CPU↔Wgpu parity oracle in `tests/parity.rs` and the overhead
# benches. Scoped to dev-deps so the library build (which sets
# `default-features = false` above) stays free of the test adapter.
gelo-protocol = { path = "../gelo-protocol", default-features = false, features = ["reference-engine"] }
env_logger = "0.11"
log = "0.4"
gelo-embedder = { path = "../gelo-embedder" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
hf-hub.workspace = true
serde_json.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# libc only used by the M1.12 R1 microbench to call `malloc_trim(0)`
# so the RSS measurement reflects kernel-visible free space, not
# glibc's free-list residency.
libc = "0.2"

[[bench]]
name = "amulet_attention"
harness = false
