[package]
name = "gelo-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# `blas` calls into BLIS for the mask apply/unapply CPU GEMMs (via a
# direct cblas_sgemm dispatch in `mask::apply` / `mask::unapply`).
# Pulls in `blas-src + blis-src` to build BLIS from source.
# At stacked_n ≈ 400 and d ∈ {1024, 3072} this is ~2× faster than the
# matrixmultiply default on AMD Zen with thread-local single-thread
# pinning (see `mask::ensure_blis_single_thread`).
blas = ["dep:blas-src", "dep:blis-src", "dep:cblas-sys"]

# Layered on top of `blas`: also routes every `ndarray::dot()` in the
# workspace through BLIS (via `ndarray/blas`). Off by default at the
# embedder shape (small per-head attention matmuls pay BLIS thread-
# spawn overhead — see commit history for the original measurement).
# Worth turning on for the **rerank** shape (n ≈ 256, d_head = 64,
# 16 heads × 2 GEMMs × 24 layers per pair) where the per-head GEMM
# clears the BLIS-vs-matrixmultiply crossover. Empirically measured
# 2026-05-15 on AMD Strix Halo iGPU.
blas-ndarray = ["blas", "ndarray/blas"]

[dependencies]
anyhow.workspace = true
ndarray = { workspace = true, features = ["rayon"] }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rayon.workspace = true
thiserror.workspace = true
blas-src = { workspace = true, optional = true }
blis-src = { workspace = true, optional = true }
cblas-sys = { version = "0.1", optional = true }
