[package]
name = "gelo-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["blas"]
# Wire the SEV-SNP backend (gelo-tee-sev-snp::SnpAttestationVerifier) in
# behind the `snp` feature so the default gelo-rag build doesn't pull in
# the sev/p384/rcgen graph for users who don't need attestation.
snp = ["dep:gelo-tee-sev-snp"]
# Layered on top of `snp`: pulls in the mock issuer + test PKI so tests
# (and the T2 VM simulator) can exercise the full attestation pipeline
# without real silicon.
snp-mock = ["snp", "gelo-tee-sev-snp/mock"]
# Light up the BLIS fast path for the GELO mask CPU GEMMs (gelo-protocol's
# `blas` feature). **Default-on** because at production shapes (stacked_n
# ≈ 264 for rerank, ≈ 400 for embed) AOCL-BLIS gives ~5× per-bucket vs
# matrixmultiply, and mask GEMMs are >50% of forward wall-time. Disable
# with `--no-default-features` if the ~5 min first-build BLIS-from-source
# cost is unacceptable.
blas = ["gelo-protocol/blas"]
# Layered on top of `blas`: route every `ndarray::dot()` through BLIS
# (covers the per-head bert attention matmuls). Measurement gate; not
# default. See `gelo-protocol/Cargo.toml` for the rationale.
blas-ndarray = ["gelo-protocol/blas-ndarray"]

[dependencies]
anyhow.workspace = true
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", optional = true }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
dp-forward = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
gelo-embedder = { path = "../gelo-embedder", features = ["dp-forward"] }
gelo-gpu-wgpu = { path = "../gelo-gpu-wgpu" }
gelo-protocol = { path = "../gelo-protocol" }
gelo-reranker = { path = "../gelo-reranker" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
zeroize = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
remote-rag = { path = "../remote-rag" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true }
