[package]
name = "gelo-reranker"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Light up the BLIS fast path inside the inner embedder forward pass.
# Off by default for the same reason as `gelo-rag`: BLIS-from-source adds
# ~5 min to the first build.
blas = ["gelo-protocol/blas"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
gelo-embedder = { path = "../gelo-embedder" }
gelo-protocol = { path = "../gelo-protocol" }
hex.workspace = true
hf-hub.workspace = true
hkdf.workspace = true
ndarray.workspace = true
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
gelo-gpu-wgpu = { path = "../gelo-gpu-wgpu" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rand_distr.workspace = true
