[package]
name = "gelo-reranker"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["blas"]
# Light up the BLIS fast path for the GELO mask SGEMMs. The reranker
# default-on this because at rerank shapes (n≈256, hidden=1024) the
# AOCL-BLIS AVX-512 path is ~5× faster per mask GEMM than the
# matrixmultiply fallback, and mask GEMMs are >50% of wall-time. First
# build adds ~5 min to compile BLIS from source; disable with
# `--no-default-features` if that's a problem.
blas = ["gelo-protocol/blas"]
# Layered on top of `blas`: route every `ndarray::dot()` through BLIS
# (including the per-head Q·Kᵀ / scores·V attention matmuls inside
# `bert::attention::multi_head_attention`). Worth measuring on the
# rerank path; see `gelo-protocol/Cargo.toml` for the rationale.
blas-ndarray = ["gelo-protocol/blas-ndarray"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
gelo-embedder = { path = "../gelo-embedder" }
gelo-protocol = { path = "../gelo-protocol" }
hex.workspace = true
hf-hub.workspace = true
hkdf.workspace = true
ndarray.workspace = true
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
gelo-gpu-wgpu = { path = "../gelo-gpu-wgpu" }
gelo-tee-sev-snp = { path = "../gelo-tee-sev-snp", features = ["mock"] }
rand_distr.workspace = true
